Now ignoring inline comments
hash comments were only recognized at start of line

--- a/README.pod
+++ b/README.pod
@@ -12,9 +12,9 @@ Convert::EDS::XDD - Convert CANopen EDS to XDD
 
 =head1 DESCRIPTION
 
-EDS and XDD are device profile formats based on C<ini|Config::Tiny> and C<XML|XML::Writer> respectively and are specified by the CiA e.V.
+EDS and XDD are device profile formats based on L<ini|Config::Tiny> and L<XML|XML::Writer> respectively and are specified by the CiA e.V.
 
-This module Takes in an EDS file or a string with its content and returns a XDD string. By default, The C<ISO15745Profile> section is B<Ethernet POWERLINK> specific, but can be adjusted by the user. A self-contained (fatpacked) `epl2xdd` script is available L<at the Github releases page|https://github.com/epl-viz/Convert-EDS-XDD/releases/latest>.
+This module Takes in an EDS file or a string with its content and returns a XDD string. By default, The C<ISO15745Profile> section is B<Ethernet POWERLINK> specific, but can be adjusted by the user. A self-contained (fatpacked) C<epl2xdd> script is available L<at the Github releases page|https://github.com/epl-viz/Convert-EDS-XDD/releases/latest>.
 
 =head1 LIMITATIONS
 
@@ -28,7 +28,9 @@ May not handle all details of the EDS. Pull requests and reports (issues on Gith
 
 Here, the [] indicate an optional parameter.
 
-Returns the EDS' content as XML string on success or C<undef> on error
+Returns the EDS' content as XML string on success or undef on error in file contents.
+
+Function croaks if opening file fails.
 
 $encoding may be used to indicate the encoding of the file, e.g. 'utf8' or
 'encoding(iso-8859-1)'.
