--- a/README.pod
+++ b/README.pod
@@ -8,7 +8,7 @@ Convert::EDS::XDD - Convert CANopen EDS to XDD
 
 =head1 SYNOPSIS
 
-  perl -MConvert::EDS::XDD=eds2xdd -e "eds2xdd 'profile.eds'" > profile.xdd
+  perl -MConvert::EDS::XDD=eds2xdd -e "print eds2xdd 'profile.eds'" > profile.xdd
 
 =head1 DESCRIPTION
 
